--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       ports:
         - "8012:8080"
       environment:
-        - "ADMINEMAIL=bind.lukeblaney.co.uk"
+        - "ADMINEMAIL=bind.lukeblaney.co.uk."
         - APIKEY
       volumes:
         - "dynamicdnsconfig:/etc/bind/dynamic"
