add ROUTERIP envvar so router can be on different IP address to script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       environment:
         - "ADMINEMAIL=bind.lukeblaney.co.uk."
         - APIKEY
+        - ROUTERIP
       volumes:
         - "dynamicconfig:/etc/bind/dynamic"
       image: lucas42/lucos_dns_updater
