remove config file as it was unnecessary complexity

--- a/updater/Dockerfile
+++ b/updater/Dockerfile
@@ -1,13 +1,11 @@
 FROM alpine:latest
 
 RUN apk --update add bind # Needed for rndc package (bind server itself has it own container)
-RUN apk --update add perl perl-config-simple perl-libwww perl-json
+RUN apk --update add perl
 
 WORKDIR /usr/src/app
 COPY server.pl .
 COPY rndc.conf /etc/bind/
-
-RUN echo "serverfilename    /etc/bind/dynamic/s.l42.eu" >> config
 
 EXPOSE 8080
 
