only deploy main branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,3 +49,7 @@ workflows:
           context: docker
           requires:
             - build
+          filters:
+            branches:
+              only:
+                - main
