point DNS at avalon (keep both deployments running in parallel so things know to go to the new one)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,3 +15,11 @@ workflows:
             branches:
               only:
                 - main
+      - lucos/deploy-avalon:
+          context: docker
+          requires:
+            - lucos/build-amd64
+          filters:
+            branches:
+              only:
+                - main
