--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,14 @@ workflows:
     jobs:
       - lucos/build-amd64:
           context: docker
+      - lucos/deploy-valen:
+          context: docker
+          requires:
+            - lucos/build-amd64
+          filters:
+            branches:
+              only:
+                - main
       - lucos/deploy-avalon:
           context: docker
           requires:
