add restart command to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,30 @@
 version: '3'
 services:
-    updater:
-      build: ./updater
-      container_name: dnsupdater
-      ports:
-        - "8012:8012"
-      environment:
-        - "ADMINEMAIL=bind.lukeblaney.co.uk."
-        - APIKEY
-        - ROUTERIP
-      volumes:
-        - "dynamicconfig:/etc/bind/dynamic"
-      image: lucas42/lucos_dns_updater
+  updater:
+    build: ./updater
+    container_name: dnsupdater
+    ports:
+      - "8012:8012"
+    environment:
+      - "ADMINEMAIL=bind.lukeblaney.co.uk."
+      - APIKEY
+      - ROUTERIP
+    volumes:
+      - "dynamicconfig:/etc/bind/dynamic"
+    image: lucas42/lucos_dns_updater
+    restart: always
 
-    bind:
-      build: ./bind
-      container_name: bind
-      ports:
-        - "53:53"
-        - "53:53/udp"
-        - "953:953"
-      volumes:
-        - "dynamicconfig:/etc/bind/dynamic"
-      image: lucas42/lucos_dns_bind
+  bind:
+    build: ./bind
+    container_name: bind
+    ports:
+      - "53:53"
+      - "53:53/udp"
+      - "953:953"
+    volumes:
+      - "dynamicconfig:/etc/bind/dynamic"
+    image: lucas42/lucos_dns_bind
+    restart: always
 
 volumes:
   dynamicconfig:
