remove default env vars from docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "8012:8012"
     environment:
-      - "ADMINEMAIL=bind.lukeblaney.co.uk."
+      - ADMINEMAIL
       - APIKEY
       - ROUTERIP
     volumes:
