--- a/updater/Dockerfile
+++ b/updater/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:latest
 
-RUN apk --update add bind # Needed for rndc package (bind server itself has it own container)
+RUN apk --update add bind # Needed for rndc package (bind server itself has its own container)
 RUN apk --update add perl perl-json perl-http-message perl-libwww perl-lwp-protocol-https
 
 WORKDIR /usr/src/app
