Generate l42.eu and s.l42.eu zonefiles automatically on a schedule Uses data from lucos_config and runs on a cron every 15 mins Fixes #10

--- a/bind/config/named.conf
+++ b/bind/config/named.conf
@@ -31,4 +31,11 @@ options {
 	recursion no;
 };
 
+include "/etc/bind/generated-zones/rndc.key";
+
+controls {
+    inet * port 953
+    allow { localnets; } keys { "rndc-key"; };
+};
+
 include "/etc/bind/named.conf.local";
